openshift/weather-app-svc-template.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: weather
  name: weather
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: weather
  type: ClusterIP
