openshift/weather-app-route-template.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: weather
  name: weather-app
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: weather
